option('enable-test', type: 'boolean', value: true)
option('enable-orc', type: 'boolean', value: true) # default true, use orc when found orc library
option('install-test', type: 'boolean', value: false)
option('enable-tensorflow-lite', type: 'boolean', value: false)
option('enable-tensorflow', type: 'boolean', value: false)
option('enable-caffe2', type: 'boolean', value: false)
option('enable-pytorch', type: 'boolean', value: false)
option('enable-pytorch-use-gpu', type: 'boolean', value: false) # default value, can be specified at run time
option('enable-movidius-ncsdk2', type: 'boolean', value: false)
option('install-example', type: 'boolean', value: false)
option('disable-video-support', type: 'boolean', value: false)
option('disable-audio-support', type: 'boolean', value: false)
option('enable-env-var', type: 'boolean', value: true)
option('enable-symbolic-link', type: 'boolean', value: true)
option('enable-capi', type: 'boolean', value: false)
option('enable-python', type: 'boolean', value: false)
option('enable-tizen', type: 'boolean', value: false)
option('enable-element-restriction', type: 'boolean', value: false) # true to restrict gst-elements in api
option('restricted-elements', type: 'string', value: '')
option('enable-tflite-nnapi-delegation', type: 'boolean', value: false) # true to enable tensorflow-lite to delegate nnapi interpretation to nnfw backend in tizen
option('enable-nnfw-runtime', type: 'boolean', value: false) # true to enable nnfw tensor filter element
option('enable-cppfilter', type: 'boolean', value: true) # Allows C++ custom filters
option('enable-filter-cpp-class', type: 'boolean', value: false) # Allows to accept C++ classes as filter subplugin implementation.
option('enable-tizen-sensor', type: 'boolean', value: false)
option('enable-edgetpu', type: 'boolean', value: false)
option('enable-armnn', type: 'boolean', value: false)
option('enable-openvino', type: 'boolean', value: false)
option('framework-priority-tflite', type: 'string', value: 'tensorflow-lite,nnfw,armnn,edgetpu', description: 'A comma separated prioritized list of neural network frameworks to open a .tflite file')
