ADD_SUBDIRECTORY(custom_example_passthrough)
ADD_SUBDIRECTORY(custom_example_scaler)
ADD_SUBDIRECTORY(custom_example_average)
ADD_SUBDIRECTORY(custom_example_opencv)
ADD_SUBDIRECTORY(custom_example_RNN)
ADD_SUBDIRECTORY(custom_example_LSTM)
ADD_SUBDIRECTORY(example_cam)
ADD_SUBDIRECTORY(example_sink)
ADD_SUBDIRECTORY(example_filter)
