subdir('custom_example_passthrough')
subdir('custom_example_scaler')
subdir('custom_example_average')
subdir('custom_example_opencv')
subdir('custom_example_RNN')
subdir('custom_example_LSTM')

subdir('example_cam')
subdir('example_sink')
subdir('example_filter')
subdir('example_object_detection')
subdir('example_decoder_image_labelling')
subdir('example_filter_performance_profile')
